[package]
name = "xlsxwriter-rs"
version = "0.1.0"
authors = ["Zach Baylin <zach@mail.rolltrax.com>"]
repository = "https://github.com/Rolltrax/xlsxwriter-rs"
description = "Rust bindings to libxlsxwriter"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.51.1"